--- a/config.json
+++ b/config.json
@@ -1,21 +1,15 @@
 {
-  "title": "Some title",
+  "title": "Line pairs labelling",
   "port": 5000,
   "debug": false,
   "labels": [
-    { "label": "raw_text", "color": "#f00" },
-    { "label": "header", "color": "#0f0" },
-    { "label": "title", "color": "hsl(70, 80%, 50%)" },
-    { "label": "item", "color": "#00f" },
-    { "label": "footer", "color": "#00f080" },
-    { "label": "article", "color": "#00f" },
-    { "label": "part", "color": "rgb(0, 0, 255)" },
-    { "label": "subitem", "color": "#00f" },
-    { "label": "struct_unit", "color": "#00f" },
-    { "label": "Other", "color": "#00f" }
+    { "label": "equal", "color": "#f00" },
+    { "label": "greater", "color": "#0f0" },
+    { "label": "less", "color": "#00f" }
   ],
   "multiclass": true,
   "input_path": "tasks.json",
+  "intermediate_path": "tmp_tasks.json",
   "image_key": ["task_path"],
   "default_label_key": ["data", "bbox", "label"],
   "task_instruction_key": ["instruction"],
