--- a/config.json
+++ b/config.json
@@ -5,11 +5,11 @@
   "labels": [
     { "label": "equal", "color": "#f00" },
     { "label": "greater", "color": "#0f0" },
-    { "label": "less", "color": "#00f" }
+    { "label": "less", "color": "#00f" },
+    { "label": "other", "color": "#ff0" }
   ],
   "multiclass": true,
   "input_path": "tasks.json",
-  "intermediate_path": "tmp_tasks.json",
   "image_key": ["task_path"],
   "default_label_key": ["data", "bbox", "label"],
   "task_instruction_key": ["instruction"],
