--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==1.1.2
+Flask==1.1.4
 Flask-RESTful==0.3.8
 werkzeug==0.16.0
 pdf2image==1.14.0
 pytesseract==0.3.7
 pillow==8.0.0
 tqdm==4.54.1
+markupsafe==2.0.1
